--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Content Manager</title>
+    <title>PauseAI Content Manager</title>
   </head>
   <body>
     <script lang="ts" type="module" src="src/index.ts"></script>
